--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Algo_U3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Algo_U3 main.cpp)
+add_executable(Algo_U3 main.cpp prioqueue.h graph.h)
